--- a/src/QuantumClient/QuantumClient/QuantumClient.csproj
+++ b/src/QuantumClient/QuantumClient/QuantumClient.csproj
@@ -8,10 +8,19 @@
     <RepositoryUrl>https://github.com/QuantumExchange/dotnet-client</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>cryptocurrency trading</PackageTags>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageId>QuantumClient</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="RestSharp" Version="106.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 </Project>
